Updated notebook to show both chat message response and structured output for comparison

--- a/structured_output/example.ipynb
+++ b/structured_output/example.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "id": "0f9f06b5",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "True"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "id": "03ffc076",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "id": "c452e050",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "id": "159230e9",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<langgraph_sdk.client.LangGraphClient object at 0x7a82600ad820>\n"
+      "<langgraph_sdk.client.LangGraphClient object at 0x7f8f38aae900>\n"
      ]
     }
    ],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "id": "a7c5c3bc",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 6,
    "id": "19de41d6",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "id": "75508cad",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "id": "63e4f618",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,7 @@
        "  'type': 'object'})"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
    "id": "fcb97474",
    "metadata": {},
    "outputs": [
@@ -231,14 +231,14 @@
       "Available schemas:\n",
       "  - OutputSchemaA\n",
       "  - OutputSchemaB\n",
+      "  - AllergyAnalysisResponse\n",
       "  - RecipeNutritionAnalysis\n",
       "  - IngredientClassification\n",
       "  - FoodSafetyReport\n",
       "  - MenuPlanning\n",
       "  - RecipeInstructions\n",
       "  - SupplierQuote\n",
-      "  - QualityInspection\n",
-      "  - AllergyAnalysisResponse\n"
+      "  - QualityInspection\n"
      ]
     }
    ],
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 10,
    "id": "5f663d02",
    "metadata": {},
    "outputs": [],
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 11,
    "id": "35394f05",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
      "output_type": "stream",
      "text": [
       "Assistant created successfully\n",
-      "Assistant ID: c81e51c6-18e1-4acd-9076-61275307e4e8\n",
+      "Assistant ID: 0c097988-e32c-49fc-abe9-ed4e942f1e07\n",
       "Assistant Name: Structured Output Assistant\n",
       "Schema: AllergyAnalysisResponse\n",
       "Version: 1\n"
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 12,
    "id": "c9d70ce3",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thread created:6c701431-12ae-4a8c-b5fb-84d05c8ddcf6\n"
+      "Thread created:a56d77e6-0316-401b-adfa-045edf5bc889\n"
      ]
     }
    ],
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 13,
    "id": "37c92245",
    "metadata": {},
    "outputs": [],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 15,
    "id": "20890909",
    "metadata": {},
    "outputs": [
@@ -379,25 +379,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📋 Run started (ID: 1f09e519...)\n",
+      "📋 Run started (ID: 1f09ee19...)\n",
+      "\n",
+      "✨ Chat Message Response:\n",
+      "Here is an analysis of the high-risk allergens present in the Pulled Chicken Fajitas recipe, along with recommendations for individuals with allergies:\n",
+      "\n",
+      "1. **Milk:**\n",
+      "   - **Reason:** The recipe contains aged white cheddar cheese and lime crema, which includes sour cream. Both are dairy products.\n",
+      "   - **Recommendation:** For those with milk allergies, replace the cheddar cheese with a dairy-free cheese alternative and use a dairy-free sour cream substitute in place of the lime crema.\n",
+      "\n",
+      "2. **Gluten:**\n",
+      "   - **Reason:** The flour tortillas are made from wheat, which contains gluten.\n",
+      "   - **Recommendation:** Substitute the flour tortillas with gluten-free tortillas, such as those made from corn or another gluten-free grain.\n",
+      "\n",
+      "3. **Eggs:**\n",
+      "   - **Reason:** The lime crema contains mayonnaise, which typically includes eggs.\n",
+      "   - **Recommendation:** Use an egg-free or vegan mayonnaise alternative for the lime crema.\n",
+      "\n",
+      "4. **Fish:**\n",
+      "   - **Reason:** Worcestershire sauce can contain anchovies, which are a type of fish.\n",
+      "   - **Recommendation:** Check the Worcestershire sauce label for fish content. Use a fish-free Worcestershire sauce or substitute with a mix of soy sauce and a bit of vinegar if fish is present.\n",
+      "\n",
+      "5. **Coconut:**\n",
+      "   - **Reason:** The recipe uses coconut sugar.\n",
+      "   - **Recommendation:** Replace coconut sugar with regular sugar or another sweetener if allergic to coconut.\n",
+      "\n",
+      "For individuals with these allergies, it's important to verify ingredient labels and consider possible cross-contamination during food preparation. Always consult a healthcare professional or allergist for personalized advice regarding food allergies.\n",
+      "\n",
       "\n",
       "✨ Extracted Structured Response (JSON):\n",
       "{\n",
       "    \"high_risk_allergen\": [\n",
       "        {\n",
       "            \"allergen\": \"Milk\",\n",
-      "            \"reason\": \"The recipe includes aged white cheddar cheese and lime crema, which contains sour cream. Both ingredients are dairy products.\"\n",
+      "            \"reason\": \"The recipe contains aged white cheddar cheese and lime crema, both of which are dairy products.\"\n",
       "        },\n",
       "        {\n",
       "            \"allergen\": \"Gluten\",\n",
-      "            \"reason\": \"Flour tortillas are made from wheat, which contains gluten and is problematic for those with gluten intolerance or celiac disease.\"\n",
+      "            \"reason\": \"Flour tortillas are made from wheat, which contains gluten.\"\n",
       "        },\n",
       "        {\n",
-      "            \"allergen\": \"Seafood\",\n",
-      "            \"reason\": \"Worcestershire sauce can sometimes contain anchovies, a type of seafood, which is a common allergen.\"\n",
+      "            \"allergen\": \"Eggs\",\n",
+      "            \"reason\": \"The lime crema contains mayonnaise, which typically includes eggs.\"\n",
+      "        },\n",
+      "        {\n",
+      "            \"allergen\": \"Fish\",\n",
+      "            \"reason\": \"Worcestershire sauce can contain anchovies, a type of fish.\"\n",
+      "        },\n",
+      "        {\n",
+      "            \"allergen\": \"Coconut\",\n",
+      "            \"reason\": \"The recipe uses coconut sugar.\"\n",
       "        }\n",
       "    ],\n",
-      "    \"recommendation\": \"For individuals with a milk allergy, substitute cheddar cheese with a dairy-free cheese alternative and replace lime crema with a dairy-free yogurt or mayonnaise. Use gluten-free tortillas for those with gluten intolerance. Verify Worcestershire sauce is seafood-free or use a vegan alternative. Consider egg-free mayonnaise for the lime crema. Always read ingredient labels and ensure preparation areas are clean to avoid cross-contamination.\"\n",
+      "    \"recommendation\": \"For those with milk allergies, replace cheddar cheese with a dairy-free alternative and use a dairy-free sour cream substitute for the lime crema. Substitute flour tortillas with gluten-free options made from corn or other grains. For egg allergies, select an egg-free mayonnaise. Verify Worcestershire sauce for fish content and opt for a fish-free version if needed. Replace coconut sugar with another sweetener if necessary. Always review ingredient labels and consider cross-contamination risks.\"\n",
       "}\n"
      ]
     }
@@ -417,31 +451,31 @@
     "        \n",
     "    elif event.event == \"updates\":\n",
     "        \n",
-    "        # # Handle agent updates (AI messages and tool calls)\n",
-    "        # if \"agent\" in event.data:\n",
-    "        #     for msg in event.data[\"agent\"][\"messages\"]:\n",
-    "        #         if msg[\"type\"] == \"ai\":\n",
-    "        #             # Check if AI is making tool calls\n",
-    "        #             if msg.get(\"tool_calls\"):\n",
-    "        #                 for tool_call in msg[\"tool_calls\"]:\n",
-    "        #                     tool_name = tool_call.get(\"name\", \"Unknown\")\n",
-    "        #                     print(f\"🔧 Calling tool: {tool_name}\")\n",
-    "        #                     # Show tool arguments in a clean way\n",
-    "        #                     if \"args\" in tool_call and tool_call[\"args\"]:\n",
-    "        #                         args_str = str(tool_call[\"args\"])\n",
-    "        #                         if len(args_str) > 100:\n",
-    "        #                             args_str = args_str[:100] + \"...\"\n",
-    "        #                         print(f\"   └─ Args: {args_str}\")\n",
+    "        # Handle agent updates (AI messages and tool calls)\n",
+    "        if \"agent\" in event.data:\n",
+    "            for msg in event.data[\"agent\"][\"messages\"]:\n",
+    "                if msg[\"type\"] == \"ai\":\n",
+    "                    # Check if AI is making tool calls\n",
+    "                    if msg.get(\"tool_calls\"):\n",
+    "                        for tool_call in msg[\"tool_calls\"]:\n",
+    "                            tool_name = tool_call.get(\"name\", \"Unknown\")\n",
+    "                            print(f\"🔧 Calling tool: {tool_name}\")\n",
+    "                            # Show tool arguments in a clean way\n",
+    "                            if \"args\" in tool_call and tool_call[\"args\"]:\n",
+    "                                args_str = str(tool_call[\"args\"])\n",
+    "                                if len(args_str) > 100:\n",
+    "                                    args_str = args_str[:100] + \"...\"\n",
+    "                                print(f\"   └─ Args: {args_str}\")\n",
     "                    \n",
-    "        #             # Show AI response content (if not just tool calls)\n",
-    "        #             elif msg.get(\"content\") and msg[\"content\"].strip():\n",
-    "        #                 print(f\"💬 Assistant Response:\")\n",
-    "        #                 # Show full response for final answers\n",
-    "        #                 content = msg[\"content\"]\n",
-    "        #                 if len(content) > 500:\n",
-    "        #                     print(f\"{content}\\n\")\n",
-    "        #                 else:\n",
-    "        #                     print(f\"{content}\\n\")\n",
+    "                    # Show AI response content (if not just tool calls)\n",
+    "                    elif msg.get(\"content\") and msg[\"content\"].strip():\n",
+    "                        print(\"\\n✨ Chat Message Response:\")\n",
+    "                        # Show full response for final answers\n",
+    "                        content = msg[\"content\"]\n",
+    "                        if len(content) > 500:\n",
+    "                            print(f\"{content}\\n\")\n",
+    "                        else:\n",
+    "                            print(f\"{content}\\n\")\n",
     "        \n",
     "        # # Handle tool responses\n",
     "        # elif \"tools\" in event.data:\n",
@@ -527,7 +561,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
